--- a/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
+++ b/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
@@ -42,7 +42,7 @@
     <CodeAnalysisRuleSetDirectories>;$(ProgramFiles)\Microsoft Visual Studio 12.0\Team Tools\Static Analysis Tools\Rule Sets</CodeAnalysisRuleSetDirectories>
     <CodeAnalysisRuleDirectories>;$(ProgramFiles)\Microsoft Visual Studio 12.0\Team Tools\Static Analysis Tools\FxCop\Rules</CodeAnalysisRuleDirectories>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-	<SignAssembly>true</SignAssembly>
+    <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>MSSharedLibKey.snk</AssemblyOriginatorKeyFile>
     <DelaySign>true</DelaySign>
     <Prefer32Bit>false</Prefer32Bit>
@@ -154,22 +154,22 @@
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\PSGalleryItem.cs" />
-    <Compile Include="Models\PSResourceManagerError.cs" />
-    <Compile Include="Models\ResourceIdentifier.cs" />
-    <Compile Include="Models\TemplateFileParameterV2.cs" />
-    <Compile Include="ResourceManagerBaseCmdlet.cs" />
-    <Compile Include="Models\GetPSResourceGroupLogParameters.cs" />
-    <Compile Include="Models\PSDeploymentEventDataAuthorization.cs" />
-    <Compile Include="Models\PSDeploymentEventDataHttpRequest.cs" />
-    <Compile Include="Models\PSDeploymentEventData.cs" />
-    <Compile Include="Models\ResourceClient.Events.cs" />
-    <Compile Include="Models\FilterResourceGroupDeploymentOptions.cs" />
-    <Compile Include="Models\PSResourceProviderType.cs" />
-    <Compile Include="Models\BasePSResourceParameters.cs" />
-    <Compile Include="Models\UpdatePSResourceParameters.cs" />
-    <Compile Include="Models\TemplateFileResource.cs" />
-    <Compile Include="Models\ValidatePSResourceGroupDeploymentParameters.cs" />
+    <Compile Include="Models.ResourceGroups\PSGalleryItem.cs" />
+    <Compile Include="Models.ResourceGroups\PSResourceManagerError.cs" />
+    <Compile Include="Models.ResourceGroups\ResourceIdentifier.cs" />
+    <Compile Include="Models.ResourceGroups\TemplateFileParameterV2.cs" />
+    <Compile Include="Models.ResourceGroups\ResourceManagerBaseCmdlet.cs" />
+    <Compile Include="Models.ResourceGroups\GetPSResourceGroupLogParameters.cs" />
+    <Compile Include="Models.ResourceGroups\PSDeploymentEventDataAuthorization.cs" />
+    <Compile Include="Models.ResourceGroups\PSDeploymentEventDataHttpRequest.cs" />
+    <Compile Include="Models.ResourceGroups\PSDeploymentEventData.cs" />
+    <Compile Include="Models.ResourceGroups\ResourceClient.Events.cs" />
+    <Compile Include="Models.ResourceGroups\FilterResourceGroupDeploymentOptions.cs" />
+    <Compile Include="Models.ResourceGroups\PSResourceProviderType.cs" />
+    <Compile Include="Models.ResourceGroups\BasePSResourceParameters.cs" />
+    <Compile Include="Models.ResourceGroups\UpdatePSResourceParameters.cs" />
+    <Compile Include="Models.ResourceGroups\TemplateFileResource.cs" />
+    <Compile Include="Models.ResourceGroups\ValidatePSResourceGroupDeploymentParameters.cs" />
     <Compile Include="ResourceGroups\GetAzureResourceGroupLogCommand.cs" />
     <Compile Include="ResourceGroups\GetAzureLocationCommand.cs" />
     <Compile Include="Resources\RemoveAzureResourceCommand.cs" />
@@ -177,35 +177,35 @@
     <Compile Include="Templates\TestAzureResourceGroupTemplateCommand.cs" />
     <Compile Include="Templates\SaveAzureResourceGroupGalleryTemplateCommand.cs" />
     <Compile Include="Templates\GetAzureResourceGroupGalleryTemplateCommand.cs" />
-    <Compile Include="Models\CreatePSResourceParameters.cs" />
-    <Compile Include="Models\PSResource.cs" />
-    <Compile Include="Models\DeploymentVariable.cs" />
-    <Compile Include="Models\FilterPSGalleryTemplatesOptions.cs" />
-    <Compile Include="Models\FilterResourcesOptions.cs" />
-    <Compile Include="Models\CreatePSDeploymentParameters.cs" />
-    <Compile Include="Models\PSResourceGroup.cs" />
-    <Compile Include="Models\CreatePSResourceGroupParameters.cs" />
-    <Compile Include="Models\GalleryTemplatesClient.cs" />
-    <Compile Include="Models\ResourceManagerExtensions.cs" />
-    <Compile Include="Models\SetResourceMode.cs" />
-    <Compile Include="Models\TemplateFile.cs" />
-    <Compile Include="Models\TemplateFileParameterV1.cs" />
+    <Compile Include="Models.ResourceGroups\CreatePSResourceParameters.cs" />
+    <Compile Include="Models.ResourceGroups\PSResource.cs" />
+    <Compile Include="Models.ResourceGroups\DeploymentVariable.cs" />
+    <Compile Include="Models.ResourceGroups\FilterPSGalleryTemplatesOptions.cs" />
+    <Compile Include="Models.ResourceGroups\FilterResourcesOptions.cs" />
+    <Compile Include="Models.ResourceGroups\CreatePSDeploymentParameters.cs" />
+    <Compile Include="Models.ResourceGroups\PSResourceGroup.cs" />
+    <Compile Include="Models.ResourceGroups\CreatePSResourceGroupParameters.cs" />
+    <Compile Include="Models.ResourceGroups\GalleryTemplatesClient.cs" />
+    <Compile Include="Models.ResourceGroups\ResourceManagerExtensions.cs" />
+    <Compile Include="Models.ResourceGroups\SetResourceMode.cs" />
+    <Compile Include="Models.ResourceGroups\TemplateFile.cs" />
+    <Compile Include="Models.ResourceGroups\TemplateFileParameterV1.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Models\ResourceClient.ResourceManager.cs" />
+    <Compile Include="Models.ResourceGroups\ResourceClient.ResourceManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceGroupDeployments\StopAzureResourceGroupDeploymentCommand.cs" />
     <Compile Include="ResourceGroupDeployments\GetAzureResourceGroupDeploymentCommand.cs" />
     <Compile Include="ResourceGroupDeployments\NewAzureResourceGroupDeploymentCommand.cs" />
-    <Compile Include="Models\PSResourceGroupDeployment.cs" />
+    <Compile Include="Models.ResourceGroups\PSResourceGroupDeployment.cs" />
     <Compile Include="ResourceGroups\RemoveAzureResourceGroupCommand.cs" />
     <Compile Include="ResourceGroups\GetAzureResourceGroupCommand.cs" />
     <Compile Include="ResourceGroups\NewAzureResourceGroupCommand.cs" />
-    <Compile Include="ResourceWithParameterBaseCmdlet.cs" />
-    <Compile Include="Models\ResourceClient.cs" />
+    <Compile Include="Models.ResourceGroups\ResourceWithParameterBaseCmdlet.cs" />
+    <Compile Include="Models.ResourceGroups\ResourceClient.cs" />
     <Compile Include="Resources\SetAzureResourceCommand.cs" />
     <Compile Include="Resources\GetAzureResourceCommand.cs" />
     <Compile Include="Resources\NewAzureResourceCommand.cs" />
@@ -247,6 +247,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <Import Project="..\..\..\packages\Microsoft.Bcl.Build.1.0.13\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\..\packages\Microsoft.Bcl.Build.1.0.13\tools\Microsoft.Bcl.Build.targets')" />
