--- a/src/Common/Commands.ScenarioTest/Resources/SessionRecords/RoleAssignmentTests/TestCreateRoleAssignment.json
+++ b/src/Common/Commands.ScenarioTest/Resources/SessionRecords/RoleAssignmentTests/TestCreateRoleAssignment.json
@@ -25,7 +25,7 @@
           "no-cache"
         ],
         "Date": [
-          "Sat, 07 Jun 2014 02:58:23 GMT"
+          "Mon, 09 Jun 2014 19:41:52 GMT"
         ],
         "Server": [
           "Microsoft-IIS/8.0"
@@ -64,7 +64,7 @@
           "no-cache"
         ],
         "Date": [
-          "Sat, 07 Jun 2014 02:58:23 GMT"
+          "Mon, 09 Jun 2014 19:41:52 GMT"
         ],
         "Server": [
           "Microsoft-IIS/8.0"
@@ -80,5 +80,7 @@
     }
   ],
   "Names": {},
-  "Variables": {}
+  "Variables": {
+    "SubscriptionId": "1eeeb395-21c8-4ae0-b145-2abd2dfe501d"
+  }
 }
