--- a/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
+++ b/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
@@ -180,7 +180,7 @@
     <Compile Include="ResourceGroups\GetAzureLocationCommand.cs" />
     <Compile Include="Resources\RemoveAzureResourceCommand.cs" />
     <Compile Include="Resources\ResourceBaseCmdlet.cs" />
-    <Compile Include="RoleAssignments\GetAzureRoleDefinitionCommand.cs" />
+    <Compile Include="RoleDefinitions\GetAzureRoleDefinitionCommand.cs" />
     <Compile Include="Templates\TestAzureResourceGroupTemplateCommand.cs" />
     <Compile Include="Templates\SaveAzureResourceGroupGalleryTemplateCommand.cs" />
     <Compile Include="Templates\GetAzureResourceGroupGalleryTemplateCommand.cs" />
