--- a/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
+++ b/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
@@ -51,6 +51,9 @@
     <Reference Include="Microsoft.Azure.Gallery">
       <HintPath>..\..\..\packages\Microsoft.Azure.Gallery.2.0.0-preview\lib\net40\Microsoft.Azure.Gallery.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Azure.Graph.RBAC">
+      <HintPath>..\..\..\packages\Microsoft.Azure.Graph.RBAC.1.0.0-preview\lib\net40\Microsoft.Azure.Graph.RBAC.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Azure.Monitoring, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Microsoft.Azure.Monitoring.2.0.1-preview\lib\net40\Microsoft.Azure.Monitoring.dll</HintPath>
@@ -60,7 +63,7 @@
     </Reference>
     <Reference Include="Microsoft.Azure.ResourceManager, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Resources.2.0.4-preview\lib\net40\Microsoft.Azure.ResourceManager.dll</HintPath>
+      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Resources.2.2.0-preview\lib\net40\Microsoft.Azure.ResourceManager.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Data.Edm, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Microsoft.Data.Edm.5.6.0\lib\net40\Microsoft.Data.Edm.dll</HintPath>
@@ -157,8 +160,13 @@
     <Reference Include="System.Management.Automation, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models.Authorization\PSActiveDirectoryObject.cs" />
+    <Compile Include="Models.Authorization\FilterRoleAssignmentsOptions.cs" />
+    <Compile Include="Models.Authorization\GraphClient.cs" />
     <Compile Include="Models.Authorization\PoliciesClientExtensions.cs" />
+    <Compile Include="Models.Authorization\PSRoleAssignment.cs" />
     <Compile Include="Models.Authorization\PSRoleDefinition.cs" />
+    <Compile Include="Models.Authorization\RoleAssignmentBaseCmdlet.cs" />
     <Compile Include="Models.ResourceGroups\PSGalleryItem.cs" />
     <Compile Include="Models.ResourceGroups\PSResourceManagerError.cs" />
     <Compile Include="Models.ResourceGroups\ResourceIdentifier.cs" />
@@ -180,6 +188,9 @@
     <Compile Include="ResourceGroups\GetAzureLocationCommand.cs" />
     <Compile Include="Resources\RemoveAzureResourceCommand.cs" />
     <Compile Include="Resources\ResourceBaseCmdlet.cs" />
+    <Compile Include="RoleAssignments\RemoveAzureRoleAssignmentCommand.cs" />
+    <Compile Include="RoleAssignments\GetAzureRoleAssignmentCommand.cs" />
+    <Compile Include="RoleAssignments\NewAzureRoleAssignmentCommand.cs" />
     <Compile Include="RoleDefinitions\GetAzureRoleDefinitionCommand.cs" />
     <Compile Include="Templates\TestAzureResourceGroupTemplateCommand.cs" />
     <Compile Include="Templates\SaveAzureResourceGroupGalleryTemplateCommand.cs" />
