--- a/src/ResourceManager/Resources/Commands.Resources/packages.config
+++ b/src/ResourceManager/Resources/Commands.Resources/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Azure.Gallery" version="2.0.0-preview" targetFramework="net40" />
-  <package id="Microsoft.Azure.Management.Resources" version="2.0.4-preview" targetFramework="net40" />
+  <package id="Microsoft.Azure.Graph.RBAC" version="1.0.0-preview" targetFramework="net40" />
+  <package id="Microsoft.Azure.Management.Resources" version="2.2.0-preview" targetFramework="net40" />
   <package id="Microsoft.Azure.Monitoring" version="2.0.1-preview" targetFramework="net40" />
   <package id="Microsoft.Azure.Policy" version="1.0.0-preview" targetFramework="net40" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net40" />
