--- a/src/ResourceManager/Resources/Commands.Resources/packages.config
+++ b/src/ResourceManager/Resources/Commands.Resources/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Azure.Gallery" version="2.0.0-preview" targetFramework="net40" />
+  <package id="Microsoft.Azure.Management.Authorization" version="0.9.0-preview" targetFramework="net40" />
   <package id="Microsoft.Azure.Management.Resources" version="2.0.4-preview" targetFramework="net40" />
   <package id="Microsoft.Azure.Monitoring" version="2.0.1-preview" targetFramework="net40" />
-  <package id="Microsoft.Azure.Policy" version="1.0.0-preview" targetFramework="net40" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net40" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net40" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
