--- a/src/ServiceManagement/ManagedCache/Commands.ManagedCache/Commands.ManagedCache.csproj
+++ b/src/ServiceManagement/ManagedCache/Commands.ManagedCache/Commands.ManagedCache.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Models\MemoryDynamicParameterSet.cs" />
     <Compile Include="Models\PSCacheService.cs" />
     <Compile Include="PSCacheClient.cs" />
+    <Compile Include="Service\GetAzureManagedCacheLocations.cs" />
     <Compile Include="Service\GetAzureManagedCache.cs" />
     <Compile Include="Service\GetAzureManagedCacheAccessKey.cs" />
     <Compile Include="Service\NewAzureManagedCache.cs" />
