--- a/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
+++ b/src/ResourceManager/Resources/Commands.Resources/Commands.Resources.csproj
@@ -149,9 +149,9 @@
     <Compile Include="ActiveDirectory\GetAzureADUserCommand.cs" />
     <Compile Include="Models.ActiveDirectory\ActiveDirectoryBaseCmdlet.cs" />
     <Compile Include="Models.ActiveDirectory\ActiveDirectoryClientExtensions.cs" />
-    <Compile Include="Models.ActiveDirectory\GroupFilterOptions.cs" />
+    <Compile Include="Models.ActiveDirectory\ADObjectFilterOptions.cs" />
+    <Compile Include="Models.ActiveDirectory\ParameterSet.cs" />
     <Compile Include="Models.ActiveDirectory\PSADObject.cs" />
-    <Compile Include="Models.ActiveDirectory\UserFilterOptions.cs" />
     <Compile Include="Models.ActiveDirectory\PSADGroup.cs" />
     <Compile Include="Models.ActiveDirectory\PSADUser.cs" />
     <Compile Include="Models.Authorization\FilterRoleAssignmentsOptions.cs" />
@@ -159,7 +159,6 @@
     <Compile Include="Models.Authorization\AuthorizationClientExtensions.cs" />
     <Compile Include="Models.Authorization\PSRoleAssignment.cs" />
     <Compile Include="Models.Authorization\PSRoleDefinition.cs" />
-    <Compile Include="Models.Authorization\RoleAssignmentBaseCmdlet.cs" />
     <Compile Include="Models.ResourceGroups\TemplateValidationInfo.cs" />
     <Compile Include="Models.ResourceGroups\PSGalleryItem.cs" />
     <Compile Include="Models.ResourceGroups\PSResourceManagerError.cs" />
