--- a/src/ResourceManager/DataFactories/Commands.DataFactories.Test/packages.config
+++ b/src/ResourceManager/DataFactories/Commands.DataFactories.Test/packages.config
@@ -15,8 +15,5 @@
   <package id="Microsoft.WindowsAzure.Common.Dependencies" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.Management.Storage" version="2.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
-  <package id="xunit" version="2.0.0-beta4-build2738" targetFramework="net45" />
-  <package id="xunit.abstractions" version="2.0.0-beta4-build2738" targetFramework="net45" />
-  <package id="xunit.assert" version="2.0.0-beta4-build2738" targetFramework="net45" />
-  <package id="xunit.core" version="2.0.0-beta4-build2738" targetFramework="net45" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" />
 </packages>
