--- a/src/Common/Commands.Common/Commands.Common.csproj
+++ b/src/Common/Commands.Common/Commands.Common.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Models\AzureAccount.cs" />
     <Compile Include="Models\AzureEnvironment.cs" />
     <Compile Include="Models\AzureProfile.cs" />
+    <Compile Include="Models\AzureSubscription.Methods.cs" />
     <Compile Include="Models\JsonProfileSerializer.cs" />
     <Compile Include="Models\XmlProfileSerializer.cs" />
     <Compile Include="Models\AzureSubscription.cs" />
@@ -189,6 +190,7 @@
     <Compile Include="Models\AzureEnvironment.Methods.cs" />
     <Compile Include="Models\RecordingTracingInterceptor.cs" />
     <Compile Include="Utilities\ConversionUtilities.cs" />
+    <Compile Include="Utilities\DictionaryExtensions.cs" />
     <Compile Include="Utilities\GeneralUtilities.cs" />
     <Compile Include="Utilities\XmlUtilities.cs" />
     <Compile Include="Utilities\FileUtilities.cs" />
@@ -212,6 +214,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\AzureAccount.Methods.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
