--- a/src/Common/Commands.Profile/Commands.Profile.csproj
+++ b/src/Common/Commands.Profile/Commands.Profile.csproj
@@ -118,6 +118,8 @@
     <Compile Include="Environment\RemoveAzureEnvironment.cs" />
     <Compile Include="Environment\SetAzureEnvironment.cs" />
     <Compile Include="Environment\GetAzureEnvironment.cs" />
+    <Compile Include="Models\PsAzureSubscription.cs" />
+    <Compile Include="Models\PsAzureSubscriptionExtended.cs" />
     <Compile Include="SwitchAzureMode.cs" />
     <Compile Include="Account\AddAzureAccount.cs" />
     <Compile Include="Subscription\RemoveAzureSubscription.cs" />
