--- a/src/Common/Commands.Common/Commands.Common.csproj
+++ b/src/Common/Commands.Common/Commands.Common.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Authentication\LoginType.cs" />
     <Compile Include="Authentication\RegistryBackedDictionary.cs" />
     <Compile Include="Common\AzurePowerShell.cs" />
+    <Compile Include="Common\AzurePowerShellClientFactory.cs" />
     <Compile Include="Common\ProfileClient.cs" />
     <Compile Include="Common\ProfileData.cs" />
     <Compile Include="Common\ServiceManagementTypes.cs" />
