Starting implementation of service principal login.
Refactored token providers to split out user vs service principal login.
Extracted service principal key storage to store in credential store.

--- a/src/Common/Commands.Common.Test/Commands.Common.Test.csproj
+++ b/src/Common/Commands.Common.Test/Commands.Common.Test.csproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\ProfileClientTests.cs" />
+    <Compile Include="Common\ServicePrincipalStoreTests.cs" />
     <Compile Include="Mocks\MockAuthenticationFactory.cs" />
     <Compile Include="Mocks\ClientMocks.cs" />
     <Compile Include="Common\GeneralUtilitiesTests.cs" />
