Added tests and fixed Import-AzurePublishSettingsFile commands

--- a/src/Common/Commands.Common.Test/Commands.Common.Test.csproj
+++ b/src/Common/Commands.Common.Test/Commands.Common.Test.csproj
@@ -216,6 +216,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\ValidProfile2.PublishSettings" />
     <None Include="packages.config" />
+    <EmbeddedResource Include="Resources\ValidProfile3.PublishSettings">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\ValidProfileChina.PublishSettings">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\invalidsubscriptions.xml" />
