Fixed Import-AzurePublishSettingsFile for AzureChina

--- a/src/Common/Commands.Common.Test/Commands.Common.Test.csproj
+++ b/src/Common/Commands.Common.Test/Commands.Common.Test.csproj
@@ -222,6 +222,9 @@
     <EmbeddedResource Include="Resources\ValidProfileChina.PublishSettings">
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\ValidProfileChinaOld.PublishSettings">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\invalidsubscriptions.xml" />
